--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,15 +10,25 @@
     <header>
         <nav>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>
+                    <a href="">HOME</a>
+                </li>
+                <li>
+                    <a href="">PORTAL</a>
+                </li>
+                <li>
+                    <a href="">CONTATOS</a>
+                </li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <P>Lançamento Iphone 14</P>
-        <img src="imagens/iphone14-lancamento.jpg" alt="">
-</body>
+        <section id="secao">
+            <h1>IPHONE 14</h1>
+            <p>Inovação e sutileza em uma só marca</p>
+            <a href=""><button>Lançamento</button></a>
+        </section>
+    </main>
+    </body>
 </html>
