--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main>
         <section id="secao">
             <h1>IPHONE 14</h1>
-            <p>Inovação e sutileza em uma só marca</p>
+            <p><span>Inovação</span> e sutileza em uma só marca</p>
             <a href=""><button>Lançamento</button></a>
         </section>
     </main>
