--- a/index.html
+++ b/index.html
@@ -24,11 +24,20 @@
     </header>
 
     <main>
-        <section id="secao">
+        <section id="secao1">
             <h1>IPHONE 14</h1>
             <p><span>Inovação</span> e sutileza em uma só marca</p>
             <a href=""><button>Lançamento</button></a>
         </section>
     </main>
-    </body>
+
+    <section id="secao2">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam vel vero tempore asperiores culpa aspernatur eveniet aut quam! Maxime necessitatibus eaque magni est quo, in recusandae voluptate quia cum eos.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum quod, blanditiis quibusdam sed fugit, nulla explicabo neque animi saepe at, delectus alias odit assumenda! Nesciunt exercitationem in animi ullam voluptas?</p>
+    </section>
+
+    <footer id="rodape">
+
+    </footer>
+</body>
 </html>
