--- a/index2.html
+++ b/index2.html
@@ -14,8 +14,12 @@
     <main>
 
         <div class="div1">
-            <img src="imagens/iphone14-pag.2.jpg" alt="iphone14">
 
+        <div>
+            <img src="imagens/iphone14-pag.2.jpg" alt="iphone14">
+        </div>
+
+        
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit aspernatur blanditiis nam maxime magni. Et consequuntur sapiente suscipit delectus deserunt error ut, dignissimos praesentium vel laborum minima dolorem doloribus! Id?</p>
 
         </div>
